--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
   ],
   "dependencies": {
     "angular": "~1.3.13",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "angular-route": "~1.3.13"
   }
 }
